# sphinx-oceanid

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: pages.yml  publish.yml
docs/: Makefile  conf.py  configuration.md  getting-started.md  index.md  install.md  revealjs.md  supported-diagrams.md  troubleshooting.md
docs/diagrams/: auth-flow.mmd
examples/revealjs/: Makefile  conf.py  index.md
skills/mermaid-diagram/: SKILL.md
src/sphinx_oceanid/: __init__.py  assets.py  autoclassdiag.py  config.py  diagram_types.py  directives.py  exceptions.py  frontmatter.py  nodes.py  visitors.py
src/sphinx_oceanid/_static/: oceanid-fullscreen.js  oceanid-observer.js  oceanid-renderer.js  oceanid-theme.js  oceanid-zoom.js  oceanid.css
tests/: conftest.py  test_assets.py  test_autoclassdiag.py  test_config.py  test_diagram_types.py  test_directives.py  test_docs_build.py  test_exceptions.py  test_frontmatter.py  test_integration_html.py  test_integration_revealjs.py  test_metadata.py  test_nodes.py  test_rendering.py  test_static_files.py  test_visitors.py
tests/helpers/: render_check.mjs
tests/roots/test-autoclasstree/: index.rst
tests/roots/test-autoclasstree-invalid/: index.rst
tests/roots/test-basic/: conf.py  empty.rst  index.rst  zoom.rst
tests/roots/test-empty-content/: index.rst
tests/roots/test-external-file/: index.rst
tests/roots/test-external-file-not-found/: index.rst
tests/roots/test-external-frontmatter/: index.rst
tests/roots/test-external-frontmatter/diagrams/: flow-with-frontmatter.mmd
tests/roots/test-frontmatter/: index.rst
tests/roots/test-frontmatter-override/: index.rst
tests/roots/test-fullscreen/: conf.py  index.rst
tests/roots/test-invalid-config/: index.rst
tests/roots/test-markdown/: conf.py  index.md
tests/roots/test-revealjs/: conf.py  index.rst
tests/roots/test-unsupported-diagram/: index.rst
tests/roots/test-zoom/: conf.py  index.rst
